terraform/vpc.tf
resource "google_compute_network" "vpc_desafio" {
  project = "desafio-devops-383518"
  name    = "vpc-desafio"

}
